--- a/Circulars/Documents/Circular 101 - Bulk Procurement Strategy for Government Institutions/index.html
+++ b/Circulars/Documents/Circular 101 - Bulk Procurement Strategy for Government Institutions/index.html
@@ -13,22 +13,22 @@ table_items:
   modified_date: 4/15/2020 4:24 PM
   path: https://archive.org/details/1_-_bulk_procurement_strategy_for_government_institutions_annexure_a_-_price_list_and_order_form_xls
   type: table_form_item
-  user: Jacques Engelbrecht
+  user: ''
 - label: Annexure B - Customer Master Template COVID19
   modified_date: 4/15/2020 4:24 PM
   path: https://archive.org/details/k_procurement_strategy_for_government_institutions_annexure_b_-_customer_master_template_covid19_xls
   type: table_form_item
-  user: Jacques Engelbrecht
+  user: ''
 - label: Annexure C - GOVERNMENT BULK CENTRAL PROCUREMENT OF PPE PROCESS
   modified_date: 4/15/2020 4:24 PM
   path: https://archive.org/details/tegy_for_government_institutions_annexure_c_-_government_bulk_central_procurement_of_ppe_process_pdf
   type: table_form_item
-  user: Jacques Engelbrecht
+  user: ''
 - label: MFMA Circular 101 - Bulk Procurement Strategy for Government Institutions
   modified_date: 4/15/2020 4:24 PM
   path: https://archive.org/details/overnment_institutions_mfma_circular_101_-_bulk_procurement_strategy_for_government_institutions_pdf
   type: table_form_item
-  user: Jacques Engelbrecht
+  user: ''
 title: null
 
 ---
