--- a/Circulars/Documents/Circular 64 - Revenue Management - 20 November 2012/index.html
+++ b/Circulars/Documents/Circular 64 - Revenue Management - 20 November 2012/index.html
@@ -13,7 +13,7 @@ table_items:
   modified_date: 11/20/2012 10:04 AM
   path: https://archive.org/details/ular_64_-_revenue_management_-_20_november_2012_mfma_circular_-_revenue_management_-_20_nov_2012_pdf
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 title: null
 
 ---
