--- a/Circulars/Documents/Circular 67 - Budget Circular for 2013 MTREF/index.html
+++ b/Circulars/Documents/Circular 67 - Budget Circular for 2013 MTREF/index.html
@@ -13,17 +13,17 @@ table_items:
   modified_date: 9/18/2019 10:30 AM
   path: https://archive.org/details/7_-_budget_circular_for_2013_mtref_annexure_b_-_budget_reconciliations_for_ar_-_21_november_2013_xls
   type: table_form_item
-  user: Sephiri Tlhomeli
+  user: ''
 - label: Annexure to MFMA Budget Circular No  67 Final
   modified_date: 4/24/2013 6:07 PM
   path: https://archive.org/details/uments_circular_67_-_budget_circular_for_2013_mtref_annexure_to_mfma_budget_circular_no_67_final_pdf
   type: table_form_item
-  user: Sylvester Mohloli
+  user: ''
 - label: MFMA Budget Circular No  67 - 12 March 2013_ Final_
   modified_date: 3/13/2013 9:55 AM
   path: https://archive.org/details/circular_67_-_budget_circular_for_2013_mtref_mfma_budget_circular_no_67_-_12_march_2013__final__pdf
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 title: null
 
 ---
