--- a/Circulars/Documents/Circular 75 - 2015 MTREF/index.html
+++ b/Circulars/Documents/Circular 75 - 2015 MTREF/index.html
@@ -11,42 +11,42 @@ table_items:
   modified_date: 3/9/2015 2:01 PM
   path: https://archive.org/details/circulars_documents_circular_75_-_2015_mtref_1_reslocalgov_service_improvement_pdf
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 - label: 2. ResLocalGov Facilitation Workbook
   modified_date: 3/9/2015 2:01 PM
   path: https://archive.org/details/circulars_documents_circular_75_-_2015_mtref_2_reslocalgov_facilitation_workbook_pdf
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 - label: 2015_16 Annexure C to MFMA Budget Circular No 75 - 17 April 2015
   modified_date: 4/22/2015 11:58 AM
   path: https://archive.org/details/uments_circular_75_-_2015_mtref_2015_16_annexure_c_to_mfma_budget_circular_no_75_-_17_april_2015_pdf
   type: table_form_item
-  user: Lawrence Gqesha
+  user: ''
 - label: 2015_16 Annexure D to MFMA Budget Circular No 75 - 25 May 2015
   modified_date: 5/28/2015 8:38 AM
   path: https://archive.org/details/ocuments_circular_75_-_2015_mtref_2015_16_annexure_d_to_mfma_budget_circular_no_75_-_25_may_2015_pdf
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 - label: 2015_16 Annexure E to MFMA Budget Circular No 75 - 01 July 2015
   modified_date: 7/2/2015 3:35 PM
   path: https://archive.org/details/cuments_circular_75_-_2015_mtref_2015_16_annexure_e_to_mfma_budget_circular_no_75_-_01_july_2015_pdf
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 - label: 2015_16 MFMA Budget Circular No 75 - 09 March 2015
   modified_date: 3/10/2015 9:15 AM
   path: https://archive.org/details/circulars_documents_circular_75_-_2015_mtref_2015_16_mfma_budget_circular_no_75_-_09_march_2015_pdf
   type: table_form_item
-  user: Jacques Engelbrecht
+  user: ''
 - label: 3. ResLocalGov Participant Workbook
   modified_date: 3/9/2015 2:01 PM
   path: https://archive.org/details/circulars_documents_circular_75_-_2015_mtref_3_reslocalgov_participant_workbook_pdf
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 - label: 'Service standards included in the Budget Circular 2015 '
   modified_date: 3/10/2015 10:15 AM
   path: https://archive.org/details/culars_documents_circular_75_-_2015_mtref_service_standards_included_in_the_budget_circular_2015_xls
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 title: null
 
 ---
