--- a/Circulars/Documents/Circular 77 - Model SCM Policy for Infrastructure Procurement and Delivery Management/index.html
+++ b/Circulars/Documents/Circular 77 - Model SCM Policy for Infrastructure Procurement and Delivery Management/index.html
@@ -14,18 +14,18 @@ table_items:
   modified_date: 10/26/2015 4:39 PM
   path: https://archive.org/details/ry_management_annexure_a_model_scm_policy_for_infrastructure_procurement_and_delivery_management_pdf
   type: table_form_item
-  user: Jacques Engelbrecht
+  user: ''
 - label: "Annexure B \u2013 Standard for Infrastructure Procurement and Delivery Management"
   modified_date: 10/26/2015 4:39 PM
   path: https://archive.org/details/d_delivery_management_annexure_b_standard_for_infrastructure_procurement_and_delivery_management_pdf
   type: table_form_item
-  user: Jacques Engelbrecht
+  user: ''
 - label: MFMA Circular 77 - Model SCM Policy for Infrastructure Procurement and Delivery
     Management
   modified_date: 10/26/2015 4:39 PM
   path: https://archive.org/details/ement_mfma_circular_77_-_model_scm_policy_for_infrastructure_procurement_and_delivery_management_pdf
   type: table_form_item
-  user: Jacques Engelbrecht
+  user: ''
 title: null
 
 ---
