--- a/Circulars/Documents/Circular No 84/index.html
+++ b/Circulars/Documents/Circular No 84/index.html
@@ -11,12 +11,12 @@ table_items:
   modified_date: 11/15/2016 8:45 AM
   path: https://archive.org/details/circulars_documents_circular_no_84_annexure_a_-_egrap_pdf
   type: table_form_item
-  user: Jacques Engelbrecht
+  user: ''
 - label: MFMA Circular No 84 - e-Learning
   modified_date: 11/15/2016 8:45 AM
   path: https://archive.org/details/circulars_documents_circular_no_84_mfma_circular_no_84_-_e-learning_pdf
   type: table_form_item
-  user: Jacques Engelbrecht
+  user: ''
 title: null
 
 ---
