--- a/Circulars/Documents/MFMA Circular No 88/index.html
+++ b/Circulars/Documents/MFMA Circular No 88/index.html
@@ -11,42 +11,42 @@ table_items:
   modified_date: 12/7/2017 11:50 AM
   path: https://archive.org/details/circulars_documents_mfma_circular_no_88_01_mfma_circular_no_88_-_30_november_2017_pdf
   type: table_form_item
-  user: Jacques Engelbrecht
+  user: ''
 - label: 02. Appendix A - Consolidated indicator overview - 30 Nov 2017
   modified_date: 11/30/2017 6:33 PM
   path: https://archive.org/details/lars_documents_mfma_circular_no_88_02_appendix_a_-_consolidated_indicator_overview_-_30_nov_2017_pdf
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 - label: 03. Appendix B - Consolidated Technical Indicator Descriptions - 05 Dec 2017
   modified_date: 12/7/2017 11:49 AM
   path: https://archive.org/details/mfma_circular_no_88_03_appendix_b_-_consolidated_technical_indicator_descriptions_-_05_dec_2017_xls
   type: table_form_item
-  user: Jacques Engelbrecht
+  user: ''
 - label: 04. Appendix C - SDBIP Planning template 2018-19 - 30 Nov 2017
   modified_date: 11/30/2017 6:37 PM
   path: https://archive.org/details/lars_documents_mfma_circular_no_88_04_appendix_c_-_sdbip_planning_template_2018-19_-_30_nov_2017_xls
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 - label: 05. Appendix D - SDBIP Reporting template 2018-19 - 30 Nov 2017
   modified_date: 11/30/2017 6:39 PM
   path: https://archive.org/details/ars_documents_mfma_circular_no_88_05_appendix_d_-_sdbip_reporting_template_2018-19_-_30_nov_2017_xls
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 - label: 06. MFMA Circular No. 88 - 30 November 2017
   modified_date: 11/30/2017 6:38 PM
   path: https://archive.org/details/circulars_documents_mfma_circular_no_88_06_mfma_circular_no_88_-_30_november_2017_pptx
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 - label: 2nd FAQs Circular No. 88 (final) May 2019
   modified_date: 5/29/2019 1:48 PM
   path: https://archive.org/details/circulars_documents_mfma_circular_no_88_2nd_faqs_circular_no_88_final_may_2019_pdf
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 - label: Circular 88 FAQs Draft v2 10 April 2018
   modified_date: 4/26/2018 5:09 PM
   path: https://archive.org/details/circulars_documents_mfma_circular_no_88_circular_88_faqs_draft_v2_10_april_2018_pdf
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 title: null
 
 ---
