--- a/Circulars/Documents/MFMA Circular No 89/index.html
+++ b/Circulars/Documents/MFMA Circular No 89/index.html
@@ -11,12 +11,12 @@ table_items:
   modified_date: 12/11/2017 10:18 AM
   path: https://archive.org/details/irculars_documents_mfma_circular_no_89_01_2018_19_mfma_budget_circular_no_89_-_08_dec_2017_final_pdf
   type: table_form_item
-  user: Lawrence Gqesha
+  user: ''
 - label: A1 Schedule - mSCOA vs 6.2 - 30 November 2017
   modified_date: 12/8/2017 2:54 PM
   path: https://archive.org/details/circulars_documents_mfma_circular_no_89_a1_schedule_-_mscoa_vs_6_2_-_30_november_2017_xls
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 title: null
 
 ---
