--- a/Circulars/Documents/MFMA Circular No. 78/index.html
+++ b/Circulars/Documents/MFMA Circular No. 78/index.html
@@ -11,12 +11,12 @@ table_items:
   modified_date: 12/10/2015 1:44 PM
   path: https://archive.org/details/irculars_documents_mfma_circular_no_78_01_2016_17_mfma_budget_circular_no_78_-_07_dec_2015_final_pdf
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 - label: 02. A1 Schedule - Ver 2 8_Dec 2015 (final)
   modified_date: 12/8/2015 12:32 PM
   path: https://archive.org/details/circulars_documents_mfma_circular_no_78_02_a1_schedule_-_ver_2_8_dec_2015_final_xls
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 title: null
 
 ---
