--- a/Circulars/Documents/MFMA Circular No. 79/index.html
+++ b/Circulars/Documents/MFMA Circular No. 79/index.html
@@ -11,7 +11,7 @@ table_items:
   modified_date: 3/8/2016 8:49 AM
   path: https://archive.org/details/circulars_documents_mfma_circular_no_79_2016_17_mfma_budget_circular_no_79_-_07_march_2016_pdf
   type: table_form_item
-  user: Sephiri Tlhomeli
+  user: ''
 title: null
 
 ---
