--- a/RegulationsandGazettes/index.html
+++ b/RegulationsandGazettes/index.html
@@ -75,10 +75,14 @@ title: Regulations and Gazettes
 <p> </p></td></tr>
 <tr>
 <td><img src="/PublishingImages/pdfnew.gif"/></td>
-<td><font><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/Documents/30%20March%202020%20Adjustment%20Gazette%20No%2043180%20-%20Stopping%20and%20Reallocation.pdf"><font>Government Gazette No. 43180 of 30 March 2020 - National Adjustment Gazette (Stopping and Re-Allocation of Funds) in terms of the Division of Revenue Act, 2019 (Act No. 16 of 2019) (DoRA), as amended by the Division of revenue Ammendment Act, 2019 (Act No.30 of 2019)</font></a></font></td>
+<td><font><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/Documents/Government%20Gazette%20No.%2043281%20Exemption%20from%20Regulations%204%283%29%20and%2029%282%29%20of%20Municipal%20Supply%20Chain%20Management%20Regulations%202005.pdf" target="_blank"><font>Government Gazette No. 43281 – Exemption from Regulations 4(3) and 29(2) of Municipal Supply Chain Management Regulations, 2005 </font></a></font></td>
+<td></td></tr>
+<tr>
+<td><img src="/PublishingImages/pdf16.gif"/></td>
+<td><font><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/Documents/30%20March%202020%20Adjustment%20Gazette%20No%2043180%20-%20Stopping%20and%20Reallocation.pdf" target="_blank"><font>Government Gazette No. 43180 of 30 March 2020 - National Adjustment Gazette (Stopping and Re-Allocation of Funds) in terms of the Division of Revenue Act, 2019 (Act No. 16 of 2019) (DoRA), as amended by the Division of revenue Ammendment Act, 2019 (Act No.30 of 2019)</font></a></font></td>
 <td>(3755kb)</td></tr>
 <tr>
-<td><img src="/PublishingImages/pdfnew.gif"/></td>
+<td><img src="/PublishingImages/pdf16.gif"/></td>
 <td><font><font><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/Documents/Government%20Gazette%20No.%2043181%20of%2030%20March%202020-%20Exemption%20from%20Act%20and%20Regulations.pdf" target="_blank"><font><font>Government Gazette No. 43181 of 30 March 2020 – Exemption from Act and Regulations</font></font></a></font></font></td>
 <td></td></tr>
 <tr>
