--- a/Circulars/Documents/Budget Circular No 98/index.html
+++ b/Circulars/Documents/Budget Circular No 98/index.html
@@ -11,37 +11,37 @@ table_items:
   modified_date: 3/10/2020 1:24 PM
   path: https://archive.org/details/lars_documents_budget_circular_no_98_01_2020_21_mfma_budget_circular_no_98_-_06_dec_2019_final___pdf
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 - label: 02. Tariff Setting Methodology - 05 November 2019
   modified_date: 1/17/2020 10:01 AM
   path: https://archive.org/details/circulars_documents_budget_circular_no_98_02_tariff_setting_methodology_-_05_november_2019_pdf
   type: table_form_item
-  user: Sephiri Tlhomeli
+  user: ''
 - label: 03. Tariff Setting Tool - 05 November 2019
   modified_date: 12/6/2019 5:48 PM
   path: https://archive.org/details/circulars_documents_budget_circular_no_98_03_tariff_setting_tool_-_05_november_2019_xls
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 - label: 04. Tariff setting Tool - user notes
   modified_date: 1/17/2020 10:38 AM
   path: https://archive.org/details/circulars_documents_budget_circular_no_98_04_tariff_setting_tool_-_user_notes_pdf
   type: table_form_item
-  user: Sephiri Tlhomeli
+  user: ''
 - label: 05. 2020_21 - Budget Circular - Water Inventory
   modified_date: 1/17/2020 10:04 AM
   path: https://archive.org/details/circulars_documents_budget_circular_no_98_05_2020_21_-_budget_circular_-_water_inventory_pdf
   type: table_form_item
-  user: Sephiri Tlhomeli
+  user: ''
 - label: 06. A1 Schedule - mSCOA vs 6.4 - ECLR v1 - Water Inventory - Final Version
   modified_date: 1/17/2020 9:59 AM
   path: https://archive.org/details/budget_circular_no_98_06_a1_schedule_-_mscoa_vs_6_4_-_eclr_v1_-_water_inventory_-_final_version_xls
   type: table_form_item
-  user: Sephiri Tlhomeli
+  user: ''
 - label: 07. List of changes between vs 6.3 and 6.4 - 6 Dec 2019
   modified_date: 1/17/2020 10:00 AM
   path: https://archive.org/details/circulars_documents_budget_circular_no_98_07_list_of_changes_between_vs_6_3_and_6_4_-_6_dec_2019_xls
   type: table_form_item
-  user: Sephiri Tlhomeli
+  user: ''
 title: null
 
 ---
