--- a/Circulars/Documents/Circular 76 - Municipal Regulations on Financial Misconduct Procedures and Criminal Proceedings/index.html
+++ b/Circulars/Documents/Circular 76 - Municipal Regulations on Financial Misconduct Procedures and Criminal Proceedings/index.html
@@ -13,12 +13,12 @@ table_items:
   modified_date: 10/19/2015 3:44 PM
   path: https://archive.org/details/misconduct_procedures_and_criminal_proceedings_mfma_circular_on_financial_misconduct_regulations_pdf
   type: table_form_item
-  user: Jacques Engelbrecht
+  user: ''
 - label: Process Flow Financial Misconduct
   modified_date: 10/19/2015 3:44 PM
   path: https://archive.org/details/ns_on_financial_misconduct_procedures_and_criminal_proceedings_process_flow_financial_misconduct_pdf
   type: table_form_item
-  user: Jacques Engelbrecht
+  user: ''
 title: null
 
 ---
