--- a/Circulars/Documents/MFMA Circular 88 Addendum/index.html
+++ b/Circulars/Documents/MFMA Circular 88 Addendum/index.html
@@ -11,27 +11,27 @@ table_items:
   modified_date: 12/5/2019 3:01 PM
   path: https://archive.org/details/culars_documents_mfma_circular_88_addendum_01_addendum_to_mfma_circular_no_88_-_04_december_2019_pdf
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 - label: 02. Appendix A - C88 - Consolidated indicator overview - 04 December 2019
   modified_date: 12/4/2019 5:07 PM
   path: https://archive.org/details/ma_circular_88_addendum_02_appendix_a_-_c88_-_consolidated_indicator_overview_-_04_december_2019_doc
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 - label: 03. Appendix B - C88 - Update Indicator TIDs - 04 December 2019
   modified_date: 12/4/2019 5:07 PM
   path: https://archive.org/details/cuments_mfma_circular_88_addendum_03_appendix_b_-_c88_-_update_indicator_tids_-_04_december_2019_xls
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 - label: 04. Appendix E - C88 - Indicators grouped by change - 04 December 2019
   modified_date: 12/4/2019 5:07 PM
   path: https://archive.org/details/mfma_circular_88_addendum_04_appendix_e_-_c88_-_indicators_grouped_by_change_-_04_december_2019_doc
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 - label: 05. Appendix F - C88 - Update Tier 1 and 2 extracted TIDs - 04 December 2019
   modified_date: 12/4/2019 5:07 PM
   path: https://archive.org/details/circular_88_addendum_05_appendix_f_-_c88_-_update_tier_1_and_2_extracted_tids_-_04_december_2019_doc
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 title: null
 
 ---
