--- a/Circulars/Documents/MFMA Circular 90 - Tax Compliance Status - 30 January 2018/index.html
+++ b/Circulars/Documents/MFMA Circular 90 - Tax Compliance Status - 30 January 2018/index.html
@@ -13,12 +13,12 @@ table_items:
   modified_date: 2/2/2018 2:04 PM
   path: https://archive.org/details/circulars_documents_mfma_circular_90_-_tax_compliance_status_-_30_january_2018_mbd_1_doc
   type: table_form_item
-  user: Jacques Engelbrecht
+  user: ''
 - label: MFMA Circular 90 - Tax Compliance Status - 30 January 2018
   modified_date: 2/2/2018 2:04 PM
   path: https://archive.org/details/x_compliance_status_-_30_january_2018_mfma_circular_90_-_tax_compliance_status_-_30_january_2018_pdf
   type: table_form_item
-  user: Jacques Engelbrecht
+  user: ''
 title: null
 
 ---
