--- a/Circulars/Documents/MFMA Circular 92 - Municipal Public Accounts Committee final - 19 April 2018/index.html
+++ b/Circulars/Documents/MFMA Circular 92 - Municipal Public Accounts Committee final - 19 April 2018/index.html
@@ -13,12 +13,12 @@ table_items:
   modified_date: 3/28/2019 3:18 PM
   path: https://archive.org/details/final_-_19_april_2018_guide_and_toolkit_for_municipal_public_accounts_commitees_-_19_april_2018_pdf
   type: table_form_item
-  user: Jacques Engelbrecht
+  user: ''
 - label: MFMA Circular 92 - Municipal Public Accounts Committee
   modified_date: 5/10/2018 10:16 AM
   path: https://archive.org/details/accounts_committee_final_-_19_april_2018_mfma_circular_92_-_municipal_public_accounts_committee_pdf
   type: table_form_item
-  user: Jacques Engelbrecht
+  user: ''
 title: null
 
 ---
