--- a/Circulars/Documents/MFMA Circular No 80/index.html
+++ b/Circulars/Documents/MFMA Circular No 80/index.html
@@ -11,18 +11,18 @@ table_items:
   modified_date: 3/8/2016 9:23 AM
   path: https://archive.org/details/circulars_documents_mfma_circular_no_80_01_mfma_circular_no_80_-_08_march_2016_pdf
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 - label: 02. Annexure B_mSCOA Business Processes and System Specifications - 08 March
     2016
   modified_date: 3/8/2016 9:23 AM
   path: https://archive.org/details/circular_no_80_02_annexure_b_mscoa_business_processes_and_system_specifications_-_08_march_2016_pdf
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 - label: 03. Addendum to MFMA Circular No. 80 - 18 October 2016
   modified_date: 10/18/2016 2:18 PM
   path: https://archive.org/details/circulars_documents_mfma_circular_no_80_03_addendum_to_mfma_circular_no_80_-_18_october_2016_pdf
   type: table_form_item
-  user: Elsabe Rossouw
+  user: ''
 title: null
 
 ---
