--- a/Circulars/index.html
+++ b/Circulars/index.html
@@ -16,6 +16,14 @@ title: Circulars
 <tbody>
 <tr>
 <td><img src="/PublishingImages/foldernew.gif"/></td>
+<td><a href="/Circulars/Documents/Circular 102 - Amendments - dated 20 May 2020"><font>MFMA Circular No 102 - Amendments - 20 May 2020</font></a></td>
+<td></td></tr>
+<tr>
+<td><img src="/PublishingImages/foldernew.gif"/></td>
+<td><a href="/Circulars/Documents/MFMA Circular 102 - Emergency Procurement in Response to National State of Disaster"><font>MFMA Circular No 102 - Emergency Procurement in Response to National State of Disaster - 05 May 2020</font></a></td>
+<td></td></tr>
+<tr>
+<td><img src="/PublishingImages/Folder.jpg"/></td>
 <td><a href="/Circulars/Documents/Circular 101 - Bulk Procurement Strategy for Government Institutions"><font>MFMA Circular No 101 - COVID-19 Bulk Procurement Strategy for Government Institutions - 15 April 2020</font></a></td>
 <td></td></tr>
 <tr>
